tests/snapshots/compiler_error_fixtures/row_effects__incomplete_handler_arms_e402.snap
---
source: tests/error_fixtures/compiler_error_fixtures_snapshots.rs
---
Fixture: examples/compiler_errors/row_effects/incomplete_handler_arms_e402.flx
== compile ==
failed (compile)
== diagnostics ==
error[E402]: Missing Effect Handler Arm

Handler for `Console` is missing operations: read.

  examples/compiler_errors/row_effects/incomplete_handler_arms_e402.flx:6:1
  |
6 | fn main() with Console {
  | ^^^^^^^^^^^^^^^^^^^^^^
  | ---------------------- handled expression

Hint:
  Add handler arms for all declared operations of the effect.
== stdout ==
<not executed>
